--- a/src/data/levels/05a_CPU/14_Operations/chat/es.yml
+++ b/src/data/levels/05a_CPU/14_Operations/chat/es.yml
@@ -24,6 +24,6 @@ multiple:
   - 📄  ~/lib/cpu/defineOperations.js~
   - solo necesitas llamarla, pasando los objetos `instructions` y `addressingModes`
   - |-
-    📚  agrega la siguiente propiedad a tu `CPU`:
+    📚  agrega la siguiente propiedad a tu 🧠  `CPU`:
       ```javascript this.operations = defineOperations(instructions, addressingModes);```
   responses: []
