--- a/src/data/levels/05a_CPU/15_Execute/chat/en.yml
+++ b/src/data/levels/05a_CPU/15_Execute/chat/en.yml
@@ -34,7 +34,7 @@ rightway:
     set((m) => m.$exercise = true);
   messages:
   - |-
-    📚  first, we'll add these methods to your `CPU`:
+    📚  first, we'll add these methods to your 🧠  `CPU`:
     **_fetchOperation()**:
       **->** reads a byte from the memory address that [PC] points at
         (let's call this `opcode`)
