--- a/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
+++ b/src/data/levels/05b_PPU/08_VRAM bridge/chat/en.yml
@@ -20,7 +20,7 @@ how:
 define:
   messages:
   - yeah, better start with that
-  - 📚  like you did with `CPUMemory::ram`, add a property called `vram` in `PPUMemory`
+  - 📚  like you did with `CPUMemory::ram`, add a property called `vram` in 🐏  `PPUMemory`
   - the array should store 4096 bytes
   - (I know I said multiple times that there's only 2 KiB of VRAM, but some games extend that memory using extra chips in their cartridge, and it's easier to emulate those by just allocating a big 4 KiB chunk 🤷 )
   - 📚  map the range $2000-$2FFF to VRAM (both reads and writes)
@@ -44,7 +44,7 @@ define:
     📚  implement these methods in 📦  `PPUData`:
     **onWrite(value)**:
       **->** writes `value` to the PPU address ```javascript ppuAddr.address```
-        (you can access the `PPUMemory` instance with ```javascript this.ppu.memory```)
+        (you can access the 🐏  `PPUMemory` instance with ```javascript this.ppu.memory```)
         (you can access the 📍  `PPUAddr` instance with ```javascript this.ppu.registers.ppuAddr```)
       **->** calls ```javascript this._incrementAddress()```
     **_incrementAddress()**:
