--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
@@ -18,16 +18,16 @@ oam:
 implement:
   messages:
   - correcto ✅
-  - 📚  crea una clase `SpriteRenderer`
+  - 📚  crea una clase 🛸  `SpriteRenderer`
   - 📚  su constructor debe recibir y asignar una propiedad `ppu` con la instancia PPU
   - |-
-    📚  haz este cambio en la clase `PPU`:
+    📚  haz este cambio en la clase 🖥️  `PPU`:
     **constructor**:
       **->** instancia el renderizador de sprites:
         ```javascript this.spriteRenderer = new SpriteRenderer(this)```
         (¡recuerda importarlo si lo definiste en otro archivo!)
   - |-
-    📚  ahora, en la clase `SpriteRenderer`, define:
+    📚  ahora, en la clase 🛸  `SpriteRenderer`, define:
     **_createSprite(id)**:
       **->** devuelve una nueva instancia de `Sprite`, leyendo el índice OAM `id`
       (¡recuerda agregar 1 a la coordenada Y!)
