--- a/src/data/levels/05b_PPU/16_Sprites 4-6 - Flipping/chat/es.yml
+++ b/src/data/levels/05b_PPU/16_Sprites 4-6 - Flipping/chat/es.yml
@@ -2,7 +2,7 @@ main:
   messages:
   - como viste en el nivel de OAM, los sprites pueden 🤸  <voltearse>, tanto horizontal como verticalmente
   - esto está representado en nuestra clase `Sprite` con los atributos `flipX` y `flipY`
-  - 📚  cambia tu `SpriteRenderer` para que dibuje los píxeles correctos, dependiendo de estos atributos
+  - 📚  cambia tu 🛸  `SpriteRenderer` para que dibuje los píxeles correctos, dependiendo de estos atributos
   responses:
   - espera, ¿qué quisiste decir con ~voltearse~? [whats]
   - necesito ayuda con el volteo horizontal [horizontal]
@@ -43,6 +43,6 @@ vertical:
   - para tener en cuenta los sprites de ~8x16~, debemos usar la coordenada Y <dentro del tile actual>
   - primero define ```javascript tileInsideY = insideY % 8;```
   - |-
-    luego, como último argumento del constructor de `Tile`, usa:
+    luego, como último argumento del constructor de 🕊️  `Tile`, usa:
       ```javascript sprite.flipY ? 7 - tileInsideY : tileInsideY```
   responses: []
