--- a/src/data/levels/04_Memory/01_CPU Memory/chat/es.yml
+++ b/src/data/levels/04_Memory/01_CPU Memory/chat/es.yml
@@ -33,7 +33,7 @@ io:
 implement:
   messages:
   - por ahora, solo vamos a implementar el primer rango (🐏  WRAM)
-  - 📚  crea una clase `CPUMemory`, usando 📄  ~/tmpl/CPUMemory.js~ como plantilla
+  - 📚  crea una clase 🐏  `CPUMemory`, usando 📄  ~/tmpl/CPUMemory.js~ como plantilla
   - 📚  su constructor debería inicializar una propiedad `ram` (un `Uint8Array` de 2048 bytes)
   - |-
     📚  implementa el primer `// TODO` de cada método:
@@ -43,7 +43,7 @@ implement:
     **write(address, value)**:
       **->** si `address` está dentro del rango $0000-$07FF, escribe `value` al byte correspondiente de `ram` y retorna
         (deja el resto del código como está)
-  - 📚  luego, como hiciste con `Cartridge`, agrega la clase a 📄  ~/code/index.js~
+  - 📚  luego, como hiciste con 💾  `Cartridge`, agrega la clase a 📄  ~/code/index.js~
   responses:
   - ¿cómo es eso de los bytes espejados? 📐 [help]
 
