--- a/src/data/levels/05a_CPU/05_Stack/chat/en.yml
+++ b/src/data/levels/05a_CPU/05_Stack/chat/en.yml
@@ -4,7 +4,7 @@ main:
   - remember the stack? 🧱
   - <{stack.png}>
   - 📚  create a new class for it
-  - it should receive the `memory` (`CPUMemory`) and `sp` (`Register8Bit`) from the CPU, as it will have to interact with them
+  - it should receive the `memory` (🐏  `CPUMemory`) and `sp` (🔢  `Register8Bit`) from the CPU, as it will have to interact with them
   - |-
     📚  implement these methods:
     **push(value)**:
