--- a/src/data/levels/05a_CPU/06_Little Endian/chat/en.yml
+++ b/src/data/levels/05a_CPU/06_Little Endian/chat/en.yml
@@ -8,13 +8,13 @@ main:
   - "that means: the least significant byte (\"low byte\") is stored first, then the most significant byte (\"high byte\")"
   - <{little_endian.png}>
   - |-
-    📚  implement this method in `CPUMemory`:
+    📚  implement this method in 🐏  `CPUMemory`:
     **read16(address)**:
       **->** returns a 16-bit number
         - the low byte is obtained by reading `address` from memory
         - the high byte is obtained by reading ```javascript address+1```
   - |-
-    📚  and these two methods in `Stack`:
+    📚  and these two methods in 🧱  `Stack`:
     **push16(bigNumber)**:
       **->** calls `push(...)` twice (first with the high byte of `bigNumber`, then with its low byte)
     **pop16()**:
