--- a/src/data/levels/05b_PPU/05_Tiles/chat/es.yml
+++ b/src/data/levels/05b_PPU/05_Tiles/chat/es.yml
@@ -7,7 +7,7 @@ main:
   - vamos a crear una clase para ayudarnos a recuperar los colores de los tiles
   - dado que la PPU renderiza por 🌠  scanlines, recibirá un parámetro (`y`) que representa el índice de la fila que debe dibujar
   - |-
-    📚  crea una clase `Tile` con lo siguiente:
+    📚  crea una clase 🕊️  `Tile` con lo siguiente:
     **constructor(ppu, patternTableId, tileId, y)**:
       **->** calcula la dirección inicial de la pattern table:
         $0000 o $1000 dependiendo de `patternTableId` (~0~ o ~1~)
@@ -33,7 +33,7 @@ test:
   messages:
   - ¡buena pregunta! 😁
   - |+
-    📚  en tu `PPU`, importa la clase `Tile` y reemplaza el código de prueba (antes de la llamada `onFrame`) con:
+    📚  en tu 🖥️  `PPU`, importa la clase 🕊️  `Tile` y reemplaza el código de prueba (antes de la llamada `onFrame`) con:
 
       ```javascript
       // <test>
