--- a/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/en.yml
@@ -44,9 +44,9 @@ useit:
   - in the case of 📊  `PPUStatus`, it uses `addWritableField(...)` because the PPU needs to write them (e.g. ```javascript ppuStatus.isInVBlankInterval = 1```) so the CPU can read the updated values via `onRead()`
   - 📚  create a `VideoRegisters` class, using that template
   - |-
-    📚  add a `registers` property to `PPU`, assigned to:
+    📚  add a `registers` property to 🖥️  `PPU`, assigned to:
          ```javascript new VideoRegisters(this)```
-  - "📚  lastly, map them in `CPUMemory` (regions $2000-$2007 and $4014):"
+  - "📚  lastly, map them in 🐏  `CPUMemory` (regions $2000-$2007 and $4014):"
   - <reads> should return ```javascript this.ppu.registers.read(address)```
   - <writes> should call ```javascript this.ppu.registers.write(address, value)``` and return
   responses: []
