--- a/src/data/levels/05b_PPU/06_Video Registers/chat/es.yml
+++ b/src/data/levels/05b_PPU/06_Video Registers/chat/es.yml
@@ -44,9 +44,9 @@ useit:
   - en el caso de 📊  `PPUStatus`, usa `addWritableField(...)` porque la PPU necesita escribirlos (p. ej. ```javascript ppuStatus.isInVBlankInterval = 1```) para que la CPU pueda leer los valores actualizados mediante `onRead()`
   - 📚  crea una clase `VideoRegisters`, utilizando esa plantilla
   - |-
-    📚  agrega una propiedad `registers` a `PPU`, asignada a:
+    📚  agrega una propiedad `registers` a 🖥️  `PPU`, asignada a:
          ```javascript new VideoRegisters(this)```
-  - "📚  finalmente, mapéalos en `CPUMemory` (regiones $2000-$2007 y $4014):"
+  - "📚  finalmente, mapéalos en 🐏  `CPUMemory` (regiones $2000-$2007 y $4014):"
   - las <lecturas> deberían retornar ```javascript this.ppu.registers.read(address)```
   - las <escrituras> deberían llamar a ```javascript this.ppu.registers.write(address, value)``` y retornar
   responses: []
