--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
@@ -12,10 +12,10 @@ finally:
   - read 📄  ~/docs/ppu/background_rendering.en.md~
   - and try to understand how to render backgrounds in <grayscale>
   - when you are ready...
-  - 📚  create a `BackgroundRenderer` class
+  - 📚  create a 🏞️  `BackgroundRenderer` class
   - 📚  its constructor should receive and assign a `ppu` property with the PPU instance
   - |-
-    📚  make these changes to the `PPU` class:
+    📚  make these changes to the 🖥️  `PPU` class:
     **constructor**:
       **->** instantiates the background renderer:
         ```javascript this.backgroundRenderer = new BackgroundRenderer(this)```
@@ -25,7 +25,7 @@ finally:
     **_onVisibleLine()**:
       **->** if the cycle is ~0~, call `backgroundRenderer.renderScanline()`
   - |-
-    📚  now, in the `BackgroundRenderer` class, define:
+    📚  now, in the 🏞️  `BackgroundRenderer` class, define:
     **renderScanline()**:
       **->** add the necessary code to render a full scanline of the background
   - bye!
@@ -62,7 +62,7 @@ help:
   - you know that `y = this.ppu.scanline`
   - and that you need to draw from ~x = 0~ to ~x = 255~
   - you also know that the screen is a grid of ~32x32~ tiles (of ~8x8~ pixels each)
-  - and lastly, you already know how to draw a tile using your `Tile` class!
+  - and lastly, you already know how to draw a tile using your 🕊️  `Tile` class!
   - |-
     one way of implementing this is doing something like:
       ```javascript
