--- a/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/10_Backgrounds 2-2 - Using Attribute tables/chat/en.yml
@@ -4,12 +4,12 @@ main:
   - to allow colors, first we need to allow games to write color information
   - so, as our first step, we'll map 🐏  Palette RAM into our PPU memory
   - then, we'll add methods to read color palettes
-  - and finally, we'll make `BackgroundRenderer` use palettes to render
-  - 📚  like you did with `PPUMemory::vram`, add a property called `paletteRam` in `PPUMemory`
+  - and finally, we'll make 🏞️  `BackgroundRenderer` use palettes to render
+  - 📚  like you did with `PPUMemory::vram`, add a property called `paletteRam` in 🐏  `PPUMemory`
   - the array should store 32 bytes
   - 📚  map the range $3F00-$3F1F to Palette RAM (both reads and writes)
   - |-
-    📚  implement this method in `PPU`:
+    📚  implement this method in 🖥️  `PPU`:
     **getColor(paletteId, colorIndex)**:
       **->** calculates the start address of the palette:
         `0x3F00 + paletteId * 4`
@@ -20,7 +20,7 @@ main:
       **->** returns a color from the master palette, using `masterColorIndex`
         (you can import and use 📄  ~/lib/ppu/masterPalette.js~ for the list of colors)
   - |-
-    📚  implement this method in `BackgroundRenderer`:
+    📚  implement this method in 🏞️  `BackgroundRenderer`:
     **_getPaletteId(nameTableId, x, y)**:
       **->** add the necessary code to return the right palette id for the pixel ~(x, y)~
       **->** follow 📄  ~/docs/ppu/background_rendering.en.md~ for guidance on how palette ids are encoded
