--- a/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/en.yml
+++ b/src/data/levels/05b_PPU/15_Sprites 3-6 - Drawing/chat/en.yml
@@ -16,12 +16,12 @@ easy:
   messages:
   - we're gonna do the following
   - |-
-      📚  in the `PPU` class, change:
+      📚  in the 🖥️  `PPU` class, change:
       **onVisibleLine(...)**:
         **->** just below the `renderScanline()` call to `backgroundRenderer`...
         **->** ...do the same with `spriteRenderer`
   - |-
-      📚  and now, implement these methods in `SpriteRenderer`:
+      📚  and now, implement these methods in 🛸  `SpriteRenderer`:
       **renderScanline()**:
         **->** use the code from my previous message!
       **_render(sprites)**:
@@ -32,7 +32,7 @@ easy:
           **->** calculates the "inside" Y coordinate:
             ```javascript sprite.diffY(y)```
             (let's call this `insideY`)
-          **->** instantiates a `Tile` passing the ppu, the pattern table id, the tile id, and the `insideY`
+          **->** instantiates a 🕊️  `Tile` passing the ppu, the pattern table id, the tile id, and the `insideY`
             (let's call this `tile`)
           **->** creates an array with the 4 palette colors of ```javascript sprite.paletteId```
             (let's call this `paletteColors`)
