--- a/src/data/levels/05b_PPU/22_Masking/chat/en.yml
+++ b/src/data/levels/05b_PPU/22_Masking/chat/en.yml
@@ -33,7 +33,7 @@ lets:
       **isRenderingEnabled()**:
         **->** returns ```javascript this.showBackground || this.showSprites```
   - |-
-    📚  in `PPU`, you want to <not do anything> if the rendering is disabled:
+    📚  in 🖥️  `PPU`, you want to <not do anything> if the rendering is disabled:
       ```javascript if (!this.registers.ppuMask.isRenderingEnabled())
         return;```
     add that at the beginning of both `onPreLine(...)` and `onVisibleLine(...)`!
@@ -47,11 +47,11 @@ renderers:
   messages:
   - yup, let's see...
   - |-
-    📚  in `BackgroundRenderer`, change `renderScanline()`...
+    📚  in 🏞️  `BackgroundRenderer`, change `renderScanline()`...
     if `showBackgroundInFirst8Pixels` is off and `x < 8`, just plot (with `PPU::plotBG(...)`) the backdrop color, increment `x`, and `continue`! don't process further!
     (remember that the backdrop color is ```javascript this.ppu.getColor(0, 0)```)
   - |-
-    📚  in `SpriteRenderer`, change `_render(...)`...
+    📚  in 🛸  `SpriteRenderer`, change `_render(...)`...
     you need a similar logic:
     ```javascript if (!this.ppu.registers.ppuMask.showSpritesInFirst8Pixels && x < 8)
       continue;```
